add_library(stm32f4-drivers STATIC EXCLUDE_FROM_ALL)

target_include_directories(stm32f4-drivers 
    PUBLIC
        $<BUILD_INTERFACE:
            ${CMAKE_CURRENT_SOURCE_DIR}/include
            ${CMAKE_CURRENT_SOURCE_DIR}/include/cmsis
            ${CMAKE_CURRENT_SOURCE_DIR}/include/hal
            ${CMAKE_CURRENT_SOURCE_DIR}/include/device
        >
)

target_link_libraries(stm32f4-drivers
    PUBLIC 
        stm32f4-drivers-conf
)

target_compile_options(stm32f4-drivers PRIVATE "-Wno-unused-parameter")

target_sources(stm32f4-drivers
    PUBLIC
        include/cmsis/cmsis_armcc.h
        include/cmsis/cmsis_armclang.h
        include/cmsis/cmsis_compiler.h
        include/cmsis/cmsis_gcc.h
        include/cmsis/cmsis_iccarm.h
        include/cmsis/cmsis_version.h
        include/cmsis/core_armv8mbl.h
        include/cmsis/core_armv8mml.h
        include/cmsis/core_cm0.h
        include/cmsis/core_cm0plus.h
        include/cmsis/core_cm1.h
        include/cmsis/core_cm23.h
        include/cmsis/core_cm3.h
        include/cmsis/core_cm33.h
        include/cmsis/core_cm4.h
        include/cmsis/core_cm7.h
        include/cmsis/core_sc000.h
        include/cmsis/core_sc300.h
        include/cmsis/mpu_armv7.h
        include/cmsis/mpu_armv8.h
        include/cmsis/tz_context.h

        include/device/stm32f407xx.h
        include/device/stm32f4xx.h
        include/device/system_stm32f4xx.h

        include/hal/Legacy/stm32_hal_legacy.h
        include/hal/Legacy/stm32f4xx_hal_can_legacy.h
        include/hal/stm32f4xx_hal.h
        include/hal/stm32f4xx_hal_adc.h
        include/hal/stm32f4xx_hal_adc_ex.h
        include/hal/stm32f4xx_hal_can.h
        include/hal/stm32f4xx_hal_cec.h
        include/hal/stm32f4xx_hal_cortex.h
        include/hal/stm32f4xx_hal_crc.h
        include/hal/stm32f4xx_hal_cryp.h
        include/hal/stm32f4xx_hal_cryp_ex.h
        include/hal/stm32f4xx_hal_dac.h
        include/hal/stm32f4xx_hal_dac_ex.h
        include/hal/stm32f4xx_hal_dcmi.h
        include/hal/stm32f4xx_hal_dcmi_ex.h
        include/hal/stm32f4xx_hal_def.h
        include/hal/stm32f4xx_hal_dfsdm.h
        include/hal/stm32f4xx_hal_dma.h
        include/hal/stm32f4xx_hal_dma_ex.h
        include/hal/stm32f4xx_hal_dma2d.h
        include/hal/stm32f4xx_hal_dsi.h
        include/hal/stm32f4xx_hal_eth.h
        include/hal/stm32f4xx_hal_exti.h
        include/hal/stm32f4xx_hal_flash.h
        include/hal/stm32f4xx_hal_flash_ex.h
        include/hal/stm32f4xx_hal_flash_ramfunc.h
        include/hal/stm32f4xx_hal_fmpi2c.h
        include/hal/stm32f4xx_hal_fmpi2c_ex.h
        include/hal/stm32f4xx_hal_fmpsmbus.h
        include/hal/stm32f4xx_hal_fmpsmbus_ex.h
        include/hal/stm32f4xx_hal_gpio.h
        include/hal/stm32f4xx_hal_gpio_ex.h
        include/hal/stm32f4xx_hal_hash.h
        include/hal/stm32f4xx_hal_hash_ex.h
        include/hal/stm32f4xx_hal_hcd.h
        include/hal/stm32f4xx_hal_i2c.h
        include/hal/stm32f4xx_hal_i2c_ex.h
        include/hal/stm32f4xx_hal_i2s.h
        include/hal/stm32f4xx_hal_i2s_ex.h
        include/hal/stm32f4xx_hal_irda.h
        include/hal/stm32f4xx_hal_iwdg.h
        include/hal/stm32f4xx_hal_lptim.h
        include/hal/stm32f4xx_hal_ltdc.h
        include/hal/stm32f4xx_hal_ltdc_ex.h
        include/hal/stm32f4xx_hal_mmc.h
        include/hal/stm32f4xx_hal_nand.h
        include/hal/stm32f4xx_hal_nor.h
        include/hal/stm32f4xx_hal_pccard.h
        include/hal/stm32f4xx_hal_pcd.h
        include/hal/stm32f4xx_hal_pcd_ex.h
        include/hal/stm32f4xx_hal_pwr.h
        include/hal/stm32f4xx_hal_pwr_ex.h
        include/hal/stm32f4xx_hal_qspi.h
        include/hal/stm32f4xx_hal_rcc.h
        include/hal/stm32f4xx_hal_rcc_ex.h
        include/hal/stm32f4xx_hal_rng.h
        include/hal/stm32f4xx_hal_rtc.h
        include/hal/stm32f4xx_hal_rtc_ex.h
        include/hal/stm32f4xx_hal_sai.h
        include/hal/stm32f4xx_hal_sai_ex.h
        include/hal/stm32f4xx_hal_sd.h
        include/hal/stm32f4xx_hal_sdram.h
        include/hal/stm32f4xx_hal_smartcard.h
        include/hal/stm32f4xx_hal_smbus.h
        include/hal/stm32f4xx_hal_spdifrx.h
        include/hal/stm32f4xx_hal_spi.h
        include/hal/stm32f4xx_hal_sram.h
        include/hal/stm32f4xx_hal_tim.h
        include/hal/stm32f4xx_hal_tim_ex.h
        include/hal/stm32f4xx_hal_uart.h
        include/hal/stm32f4xx_hal_usart.h
        include/hal/stm32f4xx_hal_wwdg.h
        include/hal/stm32f4xx_ll_adc.h
        include/hal/stm32f4xx_ll_bus.h
        include/hal/stm32f4xx_ll_cortex.h
        include/hal/stm32f4xx_ll_crc.h
        include/hal/stm32f4xx_ll_dac.h
        include/hal/stm32f4xx_ll_dma.h
        include/hal/stm32f4xx_ll_dma2d.h
        include/hal/stm32f4xx_ll_exti.h
        include/hal/stm32f4xx_ll_fmc.h
        include/hal/stm32f4xx_ll_fmpi2c.h
        include/hal/stm32f4xx_ll_fsmc.h
        include/hal/stm32f4xx_ll_gpio.h
        include/hal/stm32f4xx_ll_i2c.h
        include/hal/stm32f4xx_ll_iwdg.h
        include/hal/stm32f4xx_ll_lptim.h
        include/hal/stm32f4xx_ll_pwr.h
        include/hal/stm32f4xx_ll_rcc.h
        include/hal/stm32f4xx_ll_rng.h
        include/hal/stm32f4xx_ll_rtc.h
        include/hal/stm32f4xx_ll_sdmmc.h
        include/hal/stm32f4xx_ll_spi.h
        include/hal/stm32f4xx_ll_system.h
        include/hal/stm32f4xx_ll_tim.h
        include/hal/stm32f4xx_ll_usart.h
        include/hal/stm32f4xx_ll_usb.h
        include/hal/stm32f4xx_ll_utils.h
        include/hal/stm32f4xx_ll_wwdg.h

    PRIVATE
        source/startup_stm32f407xx.s
        source/stm32f4xx_hal.c
        source/stm32f4xx_hal_adc.c
        source/stm32f4xx_hal_adc_ex.c
        source/stm32f4xx_hal_can.c
        source/stm32f4xx_hal_cec.c
        source/stm32f4xx_hal_cortex.c
        source/stm32f4xx_hal_crc.c
        source/stm32f4xx_hal_cryp.c
        source/stm32f4xx_hal_cryp_ex.c
        source/stm32f4xx_hal_dac.c
        source/stm32f4xx_hal_dac_ex.c
        source/stm32f4xx_hal_dcmi.c
        source/stm32f4xx_hal_dcmi_ex.c
        source/stm32f4xx_hal_dfsdm.c
        source/stm32f4xx_hal_dma.c
        source/stm32f4xx_hal_dma_ex.c
        source/stm32f4xx_hal_dma2d.c
        source/stm32f4xx_hal_dsi.c
        source/stm32f4xx_hal_eth.c
        source/stm32f4xx_hal_exti.c
        source/stm32f4xx_hal_flash.c
        source/stm32f4xx_hal_flash_ex.c
        source/stm32f4xx_hal_flash_ramfunc.c
        source/stm32f4xx_hal_fmpi2c.c
        source/stm32f4xx_hal_fmpi2c_ex.c
        source/stm32f4xx_hal_fmpsmbus.c
        source/stm32f4xx_hal_fmpsmbus_ex.c
        source/stm32f4xx_hal_gpio.c
        source/stm32f4xx_hal_hash.c
        source/stm32f4xx_hal_hash_ex.c
        source/stm32f4xx_hal_hcd.c
        source/stm32f4xx_hal_i2c.c
        source/stm32f4xx_hal_i2c_ex.c
        source/stm32f4xx_hal_i2s.c
        source/stm32f4xx_hal_i2s_ex.c
        source/stm32f4xx_hal_irda.c
        source/stm32f4xx_hal_iwdg.c
        source/stm32f4xx_hal_lptim.c
        source/stm32f4xx_hal_ltdc.c
        source/stm32f4xx_hal_ltdc_ex.c
        source/stm32f4xx_hal_mmc.c
        source/stm32f4xx_hal_nand.c
        source/stm32f4xx_hal_nor.c
        source/stm32f4xx_hal_pccard.c
        source/stm32f4xx_hal_pcd.c
        source/stm32f4xx_hal_pcd_ex.c
        source/stm32f4xx_hal_pwr.c
        source/stm32f4xx_hal_pwr_ex.c
        source/stm32f4xx_hal_qspi.c
        source/stm32f4xx_hal_rcc.c
        source/stm32f4xx_hal_rcc_ex.c
        source/stm32f4xx_hal_rng.c
        source/stm32f4xx_hal_rtc.c
        source/stm32f4xx_hal_rtc_ex.c
        source/stm32f4xx_hal_sai.c
        source/stm32f4xx_hal_sai_ex.c
        source/stm32f4xx_hal_sd.c
        source/stm32f4xx_hal_sdram.c
        source/stm32f4xx_hal_smartcard.c
        source/stm32f4xx_hal_smbus.c
        source/stm32f4xx_hal_spdifrx.c
        source/stm32f4xx_hal_spi.c
        source/stm32f4xx_hal_sram.c
        source/stm32f4xx_hal_tim.c
        source/stm32f4xx_hal_tim_ex.c
        source/stm32f4xx_hal_uart.c
        source/stm32f4xx_hal_usart.c
        source/stm32f4xx_hal_wwdg.c
        source/stm32f4xx_ll_adc.c
        source/stm32f4xx_ll_crc.c
        source/stm32f4xx_ll_dac.c
        source/stm32f4xx_ll_dma.c
        source/stm32f4xx_ll_dma2d.c
        source/stm32f4xx_ll_exti.c
        source/stm32f4xx_ll_fmc.c
        source/stm32f4xx_ll_fmpi2c.c
        source/stm32f4xx_ll_fsmc.c
        source/stm32f4xx_ll_gpio.c
        source/stm32f4xx_ll_i2c.c
        source/stm32f4xx_ll_lptim.c
        source/stm32f4xx_ll_pwr.c
        source/stm32f4xx_ll_rcc.c
        source/stm32f4xx_ll_rng.c
        source/stm32f4xx_ll_rtc.c
        source/stm32f4xx_ll_sdmmc.c
        source/stm32f4xx_ll_spi.c
        source/stm32f4xx_ll_tim.c
        source/stm32f4xx_ll_usart.c
        source/stm32f4xx_ll_usb.c
        source/stm32f4xx_ll_utils.c
        source/system_stm32f4xx.c
)
